--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
 body {
     font-family: system-ui;
-    background-image: linear-gradient(to bottom right, purple, #801b80 );
+    background-image: linear-gradient(to bottom right, #9710e6, #541a54 );
 }
