--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 body {
     font-family: system-ui;
     background-image: linear-gradient(to bottom right, #9710e6, #541a54 );
+    background-repeat: no-repeat;
 }
