--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,12 @@ li {
     float: left
 }
 
-a {
+li a {
     display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 li a:hover {
