--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
     text-align: center;
+    color: white;
 }
 
 
@@ -16,7 +17,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0; 
-    background-color: #240536;
+    background-color: purple;
     overflow: hidden;
 }
 
@@ -26,12 +27,12 @@ li {
 
 li a {
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: white;
+    background-color: grey;
 }
