--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+
+}
+
+
 body {
     font-family: system-ui;
     background-image: linear-gradient(to bottom right, #9710e6, #541a54 );
