--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,9 +7,6 @@
 
 body {
     font-family: system-ui;
-    background-image: linear-gradient(to bottom right, #9710e6, rgb(41, 41, 206)  );
-    background-repeat: no-repeat;
-    height: 30v;
 }
 
 h1 {
@@ -17,6 +14,7 @@ h1 {
     color: white;
 }
 
+header
 
 /* margin = the space around an element's border */
 /* padding = the space between an element's border and the element's content */
