--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: system-ui;
+
 }
 
 h1 {
@@ -14,7 +15,10 @@ h1 {
     color: white;
 }
 
-header
+header {
+    background-image: linear-gradient(to bottom right, #9710e6, rgb(41, 41, 206)  );
+    background-repeat: no-repeat;
+}
 
 /* margin = the space around an element's border */
 /* padding = the space between an element's border and the element's content */
