--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 header {
-    background-image: linear-gradient(to bottom right, #9710e6, rgb(41, 41, 206)  );
+    background-image: linear-gradient(to bottom right, #a200ff, rgb(41, 41, 206)  );
     background-repeat: no-repeat;
 }
 
