--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 header {
-    background-image: linear-gradient(to bottom right, #fbff02, rgb(255, 153, 0)  );
+    background-image: linear-gradient(to bottom right, #ff7402, rgb(255, 238, 0)  );
     background-repeat: no-repeat;
 }
 
